# openclaw-desktop-manager

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: backup.rs  config.rs  docker.rs  health.rs  installer.rs  mod.rs  system.rs
src/components/: Layout.tsx
src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  select.tsx
src/lib/: utils.ts
src/pages/: BackupPage.tsx  ChannelConfigPage.tsx  DashboardPage.tsx  HealthCheckPage.tsx  InstallPage.tsx  ModelConfigPage.tsx  SettingsPage.tsx  WelcomePage.tsx
src/stores/: appStore.ts
src/types/: index.ts
