[package]
name = "openclaw-desktop-manager"
version = "1.0.0"
description = "OpenClaw Desktop Manager - 图形化管理 OpenClaw 的跨平台桌面应用"
authors = ["OpenClaw Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.71"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2.0"
chrono = { version = "0.4", features = ["serde"] }
semver = "1.0"
which = "6.0"
sysinfo = "0.30"
whoami = "1.5"
